app/Connector/packages/connector-theme/sass/var/Component.scss
/* ... */
// --- END DEFINE MIXINS ----

/*
  Class Listing
  - Windows
  - Connector.panel.FilterPanel
  - Connector.panel.HierarchyFilter
  - Connector.view.Dimension
  - Connector.view.DimensionSelector
  - Connector.view.FilterSave
  - Connector.view.DetailStatus
  - Connector.view.Header
  - Connector.view.GroupListView
  - Connector.view.Navigation
  - Connector.view.SelectionStatus
  - Connector.view.SingleAxisExplorer
  - Connector.view.Summary
  - Connector.view.search.Container
  - Connector.view.Variable
*/

html,body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td {
  margin: 0;
  padding: 0
}

:focus {outline:none;}
::-moz-focus-inner {border:0;}

h1 {
  font-size: 26pt;
  @include header;
}

h2 {
  font-size: 22pt;
  @include header;
}

h3 {
  font-size: 20pt;
  @include header;
}

ul {
  list-style: none;
}

li.fadein {
  -moz-animation-duration: 1s;
  -webkit-animation-duration: 1s;
  -moz-animation-name: fadein;
  -webkit-animation-name: fadein;
}

@-webkit-keyframes fadein {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

.x-tab-bar {
  display: none;
}

.x-border-layout-ct {
  background-color: $light-color;
}

.titlepanel {
  padding-top: 25px;
  padding-bottom: 7px;
  @include pagePaddingLeft;

  span {
    @include bodycaps;
  }
}

/* Windows */
.axiswindow, .measurewindow {
  width: 100px;
  height: 100px;
  position: relative;
  border: none;
  overflow: inherit !important;
  background-color: $secondary-color;
  border-bottom: 1px solid $heat-scale-3;

  .x-window-header {
    display: none;
  }

  .x-window-body {
    border-style: none;
    background-color: $secondary-color;
  }

  .x-toolbar-footer {
    background-color: $secondary-color;
  }

  .x-panel-body {
    background-color: transparent;
    border: none;
  }

  .x-panel-header {
    padding-left: 0px;
    background-image: none;
    background-color: $secondary-color;
    box-shadow: none;

    .x-header-text {
      color: $dark-color;
      font-weight: normal;
      font-size: 16pt;
      font-family: $data-font;
    }
  }

  &:after {
    border-bottom-color: $secondary-color;
  }

  &:before {
    /*border-bottom-color: trans;*/
  }
}

.axiswindow {
  &:after, &:before {
    border: 12px solid transparent;
    content: ' ';
    height: 0;
    bottom: 100%;
    position: absolute;
    width: 0;
    right: 100%;
    top: 46%;
  }

  .x-form-item {
    span {
      @include smallStandout;
    }
    background-color: $secondary-color;
    /*border-bottom: 1px solid $heat-scale-3;*/
  }
}

.measurewindow {
  &:after, &:before {
    border: 12px solid transparent;
    content: ' ';
    height: 0;
    bottom: 100%;
    position: absolute;
    width: 0;
    left: 215px;
  }

  .x-column-header-text {
    font-size: 11px;
  }

  .x-column-header-over {
    background-color: $select-color
  }

  .definitionpanel {
    height: 175px;
  }
}

.filterwindow {
  width: 100px;
  height: 100px;
  position: relative;
  border: none;
  overflow: inherit !important;
  background-color: $secondary-color;
  border-bottom: 1px solid $heat-scale-3;

  .x-window-header {
    display: none;
  }

  .x-window-body {
    border-style: none;
    background-color: $secondary-color;
  }

  .x-toolbar-footer {
    background-color: $secondary-color;
  }

  &:after, &:before {
    border: 12px solid transparent;
    content: ' ';
    height: 0;
    bottom: 100%;
    position: absolute;
    width: 0;
    left: 50px;
  }

  &:after {
    border-bottom-color: $secondary-color;
  }

  /*&:before {*/
    /*border-bottom-color: trans;*/
  /*}*/

  .x-form-item {
    span {
      @include smallStandout;
    }
    background-color: $secondary-color;
  }
}

#plotymeasurewin:after,
#plotymeasurewin:before {
  border-right-color: $secondary-color;
  border-bottom-color: transparent;
}

#plotxmeasurewin:after,
#plotxmeasurewin:before {
  top: 100%;
  left: 40%;
  border-top-color: $secondary-color;
  border-right-color: transparent;
}

/* -- END Windows */

/* Connector.panel.FilterPanel */
div.selitem {
  width: 90%; /* remaining space for .circle */
  padding: 4px 6px;
}

div.opselect {
  position: absolute;
  top: 25px;
}

div.filterpanel {

  font-family: $info-font;
  font-size: 10pt;

  .header {
    font-size: 18pt;
    font-family: $data-font;
    span {
      color: $dark-color;
    }
  }
}

div.selectionpanel {

  font-family: $info-font;
  font-size: 10pt;

  .header {
    @include smallStandout;
    font-size: 13.5pt;
  }

  .x-toolbar-footer {
    padding: 0;
    margin-left: 20px;
  }

  .x-btn-rounded-inverted-accent-small .x-btn-inner {
    font-size: 7pt;
  }
}

div.selectionfilter {
  position: relative;
  display: inline-block;
  width: 100%;
}

.closeitem {
  position: absolute;
  opacity: 0;
  right: 10px;
  margin-top: 4px;
  width: 8px;
  height: 8px;
  z-index: 5;
  border: 0;
  background-repeat: no-repeat;
}

.memberitem {

  float: right;
  white-space: nowrap;

  &:hover {
    .closeitem {
      opacity: 0.5;

      &:hover {
        opacity: 1;
      }
    }
  }
}

div.collapsed-member {
  width: 77%;
  padding: 4px 8px;
  font-size: 10pt;
}

div.activefilter {
  position: relative;
  background-color: $light-color;
  border: 1px solid #a9a9a9;
  @include border-radius(12px);
  display: inline-block;
  width: 100%;
  padding: 3px 7px;

  .circle {
    display: none;
  }

  div.collapsed-member {
    padding: 0 10px;
  }

  div.selitem {
    border: 1px solid transparent;
    padding: 2px 0;
    width: 100%;
  }

  div.status-over {
    border-color: transparent;
  }

  &:hover {
    .wholeitem {
      opacity: 0.5;
      &:hover {
        opacity: 1;
        cursor: pointer;
      }
    }
  }
}

/* -- END Connector.panel.FilterPanel */

/* Connector.panel.HierarchyFilter */
div.filtermember {
  img {
    opacity: 0;
  }
  &:hover {
    cursor: pointer;
    img {
      opacity: 1;
    }
  }
}
/* ... */

